--- a/index.html
+++ b/index.html
@@ -65,14 +65,12 @@
             </div>
 
             <div id="confirm_remove" class="modal">
-                <form class="modal-content" action="/action_page.php">
+                <form class="modal-content">
                     <div class="container">
                         <p>Are you sure you want to remove pizza from menu?</p>
 
-                        <div class="clearfix">
-                            <button id='cancel_remove' type="button" class="cancelbtn">Cancel</button>
-                            <button id='confirm_remove' type="button" class="deletebtn">Remove</button>
-                        </div>
+                        <button id='cancel_remove' type="button" class="cancelbtn">Cancel</button>
+                        <button id='confirm_delete' type="button" class="deletebtn">Remove</button>
                     </div>
                 </form>
             </div>
