Reverted small changes

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
                     <div class="container">
                         <p>Are you sure you want to remove pizza from menu?</p>
 
-                        <button id='cancel_remove' type="button" class="cancelbtn">Cancel</button>
-                        <button id='confirm_delete' type="button" class="deletebtn">Remove</button>
+                        <div class="clearfix">                      
+                            <button id='cancel_remove' type="button" class="cancelbtn">Cancel</button>
+                            <button id='confirm_delete' type="button" class="deletebtn">Remove</button>
+                        </div>
                     </div>
                 </form>
             </div>
